tempfile/bon/tests/integration/ui/compile_fail/attr_derive.stderr
error: expected parameters in parentheses
  --> tests/integration/ui/compile_fail/attr_derive.rs:58:17
   |
58 | #[builder(derive())]
   |                 ^^

error: Missing field `bounds`
  --> tests/integration/ui/compile_fail/attr_derive.rs:62:18
   |
62 | #[builder(derive(Clone()))]
   |                  ^^^^^

error: wrong delimiter, expected parentheses e.g. `bounds(...)`, but got curly braces: `bounds{...}`
  --> tests/integration/ui/compile_fail/attr_derive.rs:66:24
   |
66 | #[builder(derive(Clone(bounds {})))]
   |                        ^^^^^^

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
 --> tests/integration/ui/compile_fail/attr_derive.rs:9:23
  |
9 |     no_impl_start_fn: NoTraitImpls,
  |                       ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
  |
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
  |
3 + #[derive(Clone)]
4 | struct NoTraitImpls;
  |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:11:24
   |
11 |     no_impls_required: NoTraitImpls,
   |                        ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_member`
  --> src/__/better_errors.rs
   |
   | pub fn clone_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                        ^^^^^ required by this bound in `clone_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:13:30
   |
13 |     no_impl_optional: Option<NoTraitImpls>,
   |                              ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_member`
  --> src/__/better_errors.rs
   |
   | pub fn clone_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                        ^^^^^ required by this bound in `clone_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:16:25
   |
16 |     no_impl_optional_2: NoTraitImpls,
   |                         ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_member`
  --> src/__/better_errors.rs
   |
   | pub fn clone_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                        ^^^^^ required by this bound in `clone_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
 --> tests/integration/ui/compile_fail/attr_derive.rs:9:23
  |
9 |     no_impl_start_fn: NoTraitImpls,
  |                       ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
  |
  = help: the trait `Debug` is not implemented for `NoTraitImpls`
  = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
 --> src/__/better_errors.rs
  |
  | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
  |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
  |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:11:24
   |
11 |     no_impls_required: NoTraitImpls,
   |                        ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:13:30
   |
13 |     no_impl_optional: Option<NoTraitImpls>,
   |                              ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:16:25
   |
16 |     no_impl_optional_2: NoTraitImpls,
   |                         ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:24:24
   |
24 |     _no_impl_start_fn: NoTraitImpls,
   |                        ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:26:25
   |
26 |     _no_impls_required: NoTraitImpls,
   |                         ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_member`
  --> src/__/better_errors.rs
   |
   | pub fn clone_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                        ^^^^^ required by this bound in `clone_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:28:31
   |
28 |     _no_impl_optional: Option<NoTraitImpls>,
   |                               ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_member`
  --> src/__/better_errors.rs
   |
   | pub fn clone_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                        ^^^^^ required by this bound in `clone_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:31:26
   |
31 |     _no_impl_optional_2: NoTraitImpls,
   |                          ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_member`
  --> src/__/better_errors.rs
   |
   | pub fn clone_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                        ^^^^^ required by this bound in `clone_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:24:24
   |
24 |     _no_impl_start_fn: NoTraitImpls,
   |                        ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:26:25
   |
26 |     _no_impls_required: NoTraitImpls,
   |                         ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:28:31
   |
28 |     _no_impl_optional: Option<NoTraitImpls>,
   |                               ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:31:26
   |
31 |     _no_impl_optional_2: NoTraitImpls,
   |                          ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `StructContainsNonTrait: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:38:6
   |
38 | impl StructContainsNonTrait {
   |      ^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `StructContainsNonTrait`

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:43:49
   |
43 |         #[builder(start_fn)] _no_impl_start_fn: NoTraitImpls,
   |                                                 ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:45:29
   |
45 |         _no_impls_required: NoTraitImpls,
   |                             ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_member`
  --> src/__/better_errors.rs
   |
   | pub fn clone_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                        ^^^^^ required by this bound in `clone_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:47:35
   |
47 |         _no_impl_optional: Option<NoTraitImpls>,
   |                                   ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_member`
  --> src/__/better_errors.rs
   |
   | pub fn clone_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                        ^^^^^ required by this bound in `clone_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/attr_derive.rs:50:30
   |
50 |         _no_impl_optional_2: NoTraitImpls,
   |                              ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_member`
  --> src/__/better_errors.rs
   |
   | pub fn clone_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                        ^^^^^ required by this bound in `clone_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: `StructContainsNonTrait` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:38:6
   |
38 | impl StructContainsNonTrait {
   |      ^^^^^^^^^^^^^^^^^^^^^^ `StructContainsNonTrait` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `StructContainsNonTrait`
   = note: add `#[derive(Debug)]` to `StructContainsNonTrait` or manually `impl Debug for StructContainsNonTrait`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:43:49
   |
43 |         #[builder(start_fn)] _no_impl_start_fn: NoTraitImpls,
   |                                                 ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:45:29
   |
45 |         _no_impls_required: NoTraitImpls,
   |                             ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:47:35
   |
47 |         _no_impl_optional: Option<NoTraitImpls>,
   |                                   ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/attr_derive.rs:50:30
   |
50 |         _no_impl_optional_2: NoTraitImpls,
   |                              ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `as_dyn_debug`
  --> src/__/better_errors.rs
   |
   | pub fn as_dyn_debug<T: Debug>(member: &T) -> &dyn Debug {
   |                        ^^^^^ required by this bound in `as_dyn_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |
